--- a/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
+++ b/00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb
@@ -360,13 +360,13 @@
     "\n",
     "\n",
     "Our discussion is summarized in the following theorem.\n",
-    "```{prf:theorem}\n",
+    ":::{prf:theorem}\n",
     ":label: solution_set\n",
     "A system $A \\textbf{x} = \\textbf{b}$ of $m$ linear equations in $n$ unknowns has either\n",
     "1. exactly one solution, \n",
     "2. inﬁnitely many solutions, or\n",
     "3. no solution.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "```{hint} Rank and [](#solution_set)\n",
     "Can you identify conditions on the rank of $A$ that imply the three cases? For instance, rank($A) = n \\Rightarrow$ exactly one solution.\n",
@@ -543,7 +543,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
