--- a/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/035-kernel_image.ipynb
@@ -114,7 +114,7 @@
     "-5x_1 + 9x_2 + 2x_3 &= 0, \n",
     "\\end{equation}\n",
     "or in matrix form $A \\vv x = \\vv 0$, where $A = \\bm1 & -3 & -2 \\\\ -5 & 9 & 1 \\em$.\n",
-    "Recall that the set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../Linear_Algebraic_Systems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate this solution set to the matrix $A$ which will give us a geometric interpretation to the solution of the algebraic system. \n",
+    "Recall that the set of $\\vv x$ satisfying $A \\vv x = \\vv 0$ is the [solution set](../00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb#solution_set) of [](#null_eg_eqn). Our goal is to relate this solution set to the matrix $A$ which will give us a geometric interpretation to the solution of the algebraic system. \n",
     "\n",
     "Is $\\vv u = \\bm 5 \\\\ 3 \\\\ -2 \\em$ in Null$(A)$? \n",
     "\n",
@@ -290,11 +290,11 @@
     ":::\n",
     "```\n",
     "\n",
-    "```{note} Consequences of [](#soln_thm)\n",
+    ":::{note} Consequences of [](#soln_thm)\n",
     "1. [](#soln_thm) tells us that to contruct the most general solution to $A \\vv x = \\vv b$, we only need to know a _particular solution $\\vv x^*$_ and the general solution to $A \\vv n = \\vv 0$.\n",
     "2. This might remind you of how you solved inhomogeneous linear ordinary differential equations; again, not a coincidence! We will see later in the semester that linear algebraic systems and linear ordinary differential equations are both examples of _general linear systems_.\n",
     "3. Computing the general solution to $A \\vv x = \\vv b$ requires applying Gaussian Elimination (GE) first to $\\bm A | \\vv b\\em$ to get a particular solution, and then to $\\bm A | \\vv 0 \\em$ to characterize the null space.\n",
-    "```\n",
+    ":::\n",
     "\n",
     ":::{exercise}\n",
     ":label:thm_ex\n",
@@ -359,14 +359,14 @@
     "\n",
     ":::\n",
     "\n",
-    "```{prf:theorem} Summary so far\n",
+    ":::{prf:theorem} Summary so far\n",
     ":label: sum_thm\n",
     "If $A \\in \\mathbb{R}^{m \\times n}$, then the following conditions are equivalent (any one implies all of the other):\n",
     "1. Null$(A) = \\{\\vv 0\\}$, i.e., $A \\vv x = 0$ if and only if $\\vv x = 0$\n",
     "2. rank$(A) = n$\n",
-    "3. The linear system $A \\vv x = \\vv b$ has no [free variables](../Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn)\n",
+    "3. The linear system $A \\vv x = \\vv b$ has no [free variables](../00_Ch_1_Linear_Algebraic_Systems/026-linsys-general.ipynb#free_basic_defn)\n",
     "4. The system $A \\vv x = \\vv b$ has a unique solution for each $\\vv b \\in $Col$(A)$.\n",
-    "```\n",
+    ":::\n",
     "\n",
     "We can specialize [](#sum_thm) or square matrices, which allows us to characterize if $A$ is invertible via either its null space or column space.\n",
     "\n",
@@ -388,7 +388,7 @@
    "source": [
     "## The Superposition Principle\n",
     "\n",
-    "We already showed that for homogeneous systems $A \\vv x = \\vv 0$, [superposition](./035-kernel_image.ipynb#super_thm) lets us generate new solutions by combining known solutions. For _inhomogeneous systems_ $A \\vv x = \\vv b$, superposition lets us combine solutions for _different RHS_($\\vv b$ vectors).\n",
+    "We already showed that for homogeneous systems $A \\vv x = \\vv 0$, [superposition](#super_thm) lets us generate new solutions by combining known solutions. For _inhomogeneous systems_ $A \\vv x = \\vv b$, superposition lets us combine solutions for _different RHS_($\\vv b$ vectors).\n",
     "\n",
     "Suppose we have solutions $\\vv x_1^*$ and $\\vv x_2^*$ to $A \\vv x = \\vv b_1$ and $A \\vv x = \\vv b_2$, respectively. Can I quickly build a solution to $A \\vv x = c_1 \\vv b_1 + c_2 \\vv b_2$ for some $c_1, c_2 \\in \\mathbb{R}$? \n",
     "\n",
@@ -400,7 +400,7 @@
     "\\end{equation}\n",
     "It worked! From [](#super_eqn), $\\vv x^* = c_1 \\vv x_1^* + c_2 \\vv x_2^*$ is a solution to $A \\vv x = c_1 \\vv b_1 + c_2 \\vv b_2$. This is again the power of linear superposition at play. \n",
     "\n",
-    ":::{prf:example}\n",
+    "```{prf:example}\n",
     ":label:sup_eg\n",
     "\n",
     "The system\n",
@@ -414,7 +414,7 @@
     "For $\\vv f = \\vv e_1 = \\bm 1 \\\\ 0 \\em$, $\\vv x_1^* = \\bm \\frac{4}{15} \\\\ -\\frac{1}{15}\\em$; and $\\vv f = \\vv e_2 = \\bm 0 \\\\ 1 \\em$, $\\vv x_2^* = \\bm -\\frac{1}{15} \\\\ \\frac{4}{15}\\em$. \n",
     "\n",
     "Hence, we can write the general solution for $\\vv f = \\bm f_1 \\\\ f_2 \\em = f_1 \\vv e_1 + f_2 \\vv e_2$ as $\\vv x^* = f_1 \\vv x_1^* + f_2 \\vv x_2^*$! \n",
-    ":::\n",
+    "```\n",
     "\n",
     "### The General form\n",
     "\n",
@@ -432,7 +432,7 @@
     "\\end{equation}\n",
     "where $\\vv n \\in $Null$(A)$.\n",
     "\n",
-    ":::{important}\n",
+    "```{important}\n",
     ":label: sup_imp\n",
     "If we know the particular solutions $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_m^*$ to $A \\vv x = \\vv e_i$ for $i = 1, 2, \\ldots, m$, where $\\vv e_1, \\ldots, \\vv e_m$ are the standard basis vectors of $\\mathbb{R}^m$, then, we can construct a particular solution $\\vv x^*$\n",
     " to $A \\vv x = \\vv b$ by first writing \n",
@@ -442,12 +442,11 @@
     " to conclude that $\\vv x^* = b_1 \\vv x_1^* + b_2 \\vv x_2^*  +\\ldots + b_m \\vv x_m^*$ is a solution to $A \\vv x = \\vv b$. \n",
     " \n",
     "This is _conceptually useful_ because it tells us how the elements $b_i$ of $\\vv b$ affect our solution $\\vv x^*$.\n",
-    ":::\n",
-    "\n",
-    "```{note}\n",
-    "Practically, this is of limited value however; for example, if $A$ is square, then [this fact](#sup_imp) is another way of computing $A^{-1}$. Indeed, the vectors $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_m^*$ are the columns of $A^{-1}$(what are the $m$ linear systems?), and $\\vv x^* = A^{-1}\\vv b$.\n",
     "```\n",
-    "\n"
+    "\n",
+    ":::{note}\n",
+    "Practically, this is of limited value however; for example, if $A$ is square, then [this fact](#sup_imp) is another way of computing $A^{-1}$. Indeed, the vectors $\\vv x_1^*, \\vv x_2^*, \\ldots, \\vv x_m^*$ are the columns of $A^{-1}$(what are the $m$ linear systems?), and $\\vv x^* = A^{-1}\\vv b$.\n",
+    ":::"
    ]
   },
   {
@@ -461,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9dd2e4-4351-42ef-874b-12f077db3d2e",
+   "id": "681fc35b-0736-4970-905f-c8f7e3ad5551",
    "metadata": {},
    "outputs": [],
    "source": []
