--- a/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
+++ b/01_Ch_2_Vector_Spaces_and_Bases/036-adj.ipynb
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "5ce94e27-b915-4ab8-a779-5823bbfd62fe",
    "metadata": {},
    "outputs": [
@@ -430,10 +430,10 @@
     "The proof of [](#fund_thm) can be found in pp. 114-118 of ALA. We will focus on some remarkable implications of [](#fund_thm) which are given below.\n",
     "\n",
     "\n",
-    "```{note} Observations from [](#fund_thm)\n",
+    ":::{note} Observations from [](#fund_thm)\n",
     "1. [Rank](../Linear_Algebraic_Systems/026-linsys-general.ipynb#rank_defn) is defined as the number of pivots, which coincides with the number of linearly independent columns of $A$. Hence, from [](#fund_thm), rank=number of linearly independent rows! \n",
     "2. Taking transposes does not affect the rank: rank is an intrinsic property of a matrix.\n",
-    "```\n",
+    ":::\n",
     "\n",
     ":::{prf:theorem} Rank-Nullity Theorem\n",
     ":label:rank_null_thm\n",
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "90f04428-e354-4158-b1cf-06d075340da4",
    "metadata": {},
    "outputs": [
