--- a/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
@@ -37,7 +37,7 @@
    "id": "288f6f57-4944-4cfc-9122-ef8b377f1739",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/041-inner.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 05 - Inner products, length, angles, and norms.pdf>`"
    ]
@@ -60,9 +60,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is an inner product on a vector space?\n",
-    "- What is a norm induced by an inner product?\n",
-    "- What are some important examples of inner products?"
+    "- an inner product on a vector space\n",
+    "- a norm induced by an inner product\n",
+    "- some important examples of inner products"
    ]
   },
   {
@@ -70,7 +70,11 @@
    "id": "856723de",
    "metadata": {},
    "source": [
-    "In the previous section, we generalized how we add and scale vectors in $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to general Euclidean spaces $\\mathbb{R}^n$, and more general vector spaces $V$. In this section, we bring over other key concepts from $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to vector spaces, namely the ideas of angle, length, and distance. In vector spaces, these notions are built up from the idea of *inner products*."
+    "## Introduction\n",
+    "\n",
+    "In the last two lectures, we generalized how we add and scale vectors in $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to general Euclidean spaces $\\mathbb{R}^n$, and more general vector spaces $V$. In this lecture, we bring over other key concepts from $\\mathbb{R}^2$ and $\\mathbb{R}^3$ to vector spaces, namely the ideas of angle, length, and distance.\n",
+    "\n",
+    "The notions of angle, length, and distance in general vector spaces play a foundational role in modern applications of engineering, economics, and AI. By the end of the next few lectures, you will be equipped with both conceptual and computational tools that will allow you to solve some really interesting problems with immediate real-world application!"
    ]
   },
   {
@@ -80,7 +84,7 @@
    "source": [
     "# The Dot Product and the Euclidean Norm\n",
     "\n",
-    "In this section, we focus on Euclidean space $\\mathbb{R}^n$. A familiar example of an inner-product for vectors in $\\mathbb{R}^n$ is the _dot product_:\n",
+    "We start with a familiar example of an inner-product for vectors in $\\mathbb{R}^n$, the _dot product_:\n",
     "\n",
     ":::{prf:definition} The Dot Product \n",
     ":label: dot-product-defn\n",
@@ -101,7 +105,7 @@
     "That is, the dot product of a vector $\\vv v$ with itself is given by the sum of the squares of its entries.\n",
     "```\n",
     "\n",
-    "The Pythagorean theorem extends to $n-$dimensional space and tells us that $\\vv v \\cdot \\vv v$ is the square of the length of $\\vv v$. We use this observation to define the _Euclidean norm_:\n",
+    "The Pythagorean theorem extends to $n-$dimensional space and tells us that $\\vv v \\cdot \\vv v$ is the square of the length of $\\vv v$. We use this observation to define the _Euclidean norm_ (or length):\n",
     "\n",
     ":::{prf:definition} The Euclidean Norm\n",
     ":label: euclidean-norm-defn\n",
@@ -122,7 +126,7 @@
     ":align: center\n",
     ":::\n",
     "\n",
-    "````{exercise}  Dot product of 2 vectors in $\\mathbb{R}^3$\n",
+    ":::{exercise}  Dot Product of 2 Vectors in $\\mathbb{R}^3$\n",
     ":label: distance-ex1\n",
     "\n",
     "Find the dot product of $\\bm 1\\\\ 2 \\\\ 3 \\em$ and $\\bm 4 \\\\ 5\\\\ 6 \\em$.\n",
@@ -136,12 +140,22 @@
     "    \\bm 1\\\\ 2 \\\\ 3 \\em \\cdot \\bm 4 \\\\ 5\\\\ 6 \\em = 1(4) + 2(5) + 3(6) = \\boxed{32}\n",
     "\\end{align*}\n",
     "```\n",
-    "````"
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4316e3ec-ba25-4ff6-a34d-01a9484c6267",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "In NumPy, the dot product of a vector `v1` with another vector `v2` is given by `np.dot(v1, v2)` as illustrated below. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "62c77b9d-58d3-40dc-bb46-d7c0493f7620",
    "metadata": {},
    "outputs": [
@@ -169,9 +183,11 @@
    "id": "af78703f-97f9-4a94-8171-253991529191",
    "metadata": {},
    "source": [
-    "# Inner Products\n",
+    "## Inner Products\n",
     "\n",
-    "In this section, we introduce the generalization of the [dot product](#dot-product-defn): inner products. The definition of inner products takes the most fundamental properties of the dot product (which is only defined for vectors living in Euclidean space $\\mathbb{R}^n$), and abstracts it for more general vector spaces.\n",
+    "The [Eucledian norm](#euclidean-norm-defn) $\\|\\vv v\\|$ of a vector $\\vv v$ has some intuitive properties. For example, if $\\vv v \\neq 0$, then $\\|\\vv v\\| > 0$ (all nonzero vectors have positive length), and $\\|\\vv v\\| = 0$ if and only if $\\vv v = 0$ (only the zero vector has zero length).\n",
+    "\n",
+    "These properties, and those of the [dot product](#dot-product-defn), inspire the following abstract definition for more general inner-products:\n",
     "\n",
     ":::{prf:definition} Inner Products\n",
     ":label: inner_defn\n",
@@ -184,7 +200,7 @@
     "\\langle \\vv u, c \\vv v + d \\vv w \\rangle &= c \\langle \\vv u, \\vv v \\rangle + d \\langle \\vv u, \\vv w \\rangle.\n",
     "\\end{equation}\n",
     "\n",
-    "(This is saying that inner products must be linear in their first argument when the second argument is fixed, and vice versa. Note that this does NOT mean that inner products are linear in both arguments together; if you scale both arguments by a factor of 2, the inner product is scaled by a factor of 4!)\n",
+    "<!-- (This is saying that inner products must be linear in their first argument when the second argument is fixed, and vice versa. Note that this does NOT mean that inner products are linear in both arguments together; if you scale both arguments by a factor of 2, the inner product is scaled by a factor of 4!) -->\n",
     "\n",
     "2. *Symmetry*\n",
     "\\begin{equation}\n",
@@ -199,12 +215,39 @@
     "\\end{equation}\n",
     ":::\n",
     "\n",
-    "You should verify that the _dot product_ satisfies [](#inner_defn). \n",
+    "As we will see soon, an inner product allows us to define notions of angle, length, and distance in a vector space. This added _structure_ is very useful, so when a vector space is equipped with an inner product, we call it an _inner product space_.\n",
+    "\n",
+    ":::{prf:definition} Inner Product Space\n",
+    ":label: inner-product-space-defn\n",
+    "An inner product space is a vector space $V$ equipped with an inner product $\\langle \\cdot, \\cdot \\rangle$ defined on $V$.\n",
+    ":::\n",
     "\n",
     "```{warning}\n",
     "A vector space can admit many different inner products. It is therefore necessary (and polite) to specify which inner product is being used when defining an inner product space.\n",
     "```\n",
     "\n",
+    "You can (and should!) check that the [dot product](#dot-product-defn) satisfies [](#inner_defn).\n",
+    "\n",
+    ":::{note} Induced Norm\n",
+    ":label: norm_induced\n",
+    "Now, just as the dot product could be used to define the Euclidean norm of a vector, we can also define a norm induced by a general [inner-product](#inner_defn):\n",
+    "\\begin{equation}\n",
+    "\\label{norm_induced_eqn}\n",
+    "\\|\\vv v\\| = \\sqrt{\\langle \\vv v, \\vv v \\rangle}.\n",
+    "\\end{equation}\n",
+    "The positivity axiom ensures that $\\|\\vv v\\| \\geq 0$ for all $\\vv v \\in V$, and that $\\|\\vv v\\| = 0$ if and only if $\\vv v = 0$.\n",
+    ":::\n",
+    "\n",
+    ":::{warning}\n",
+    "We are using the same norm symbol $\\|\\cdot\\|$ for many different norms. If we do not specify which norm/inner-product is being used. You should interpret this as a \"generic\" norm induced by a \"generic\" inner-product satisfying [](#inner_defn). The good news is that norms behave in ways similar to the familiar [dot product](#dot-product-defn) and [Eucledian norm](#euclidean-norm-defn).\n",
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c29b8a30-d3fb-48b8-bbcf-87b8abbf8312",
+   "metadata": {},
+   "source": [
     ":::{prf:example} Weighted dot product\n",
     ":label: weighted-dot-product-ex\n",
     "\n",
@@ -244,23 +287,23 @@
     "\n",
     "If $\\vv v = \\vv 0$, then clearly this expression is zero because all terms are zero. On the other hand, if either component of $\\vv v$ is nonzero, then this expression is strictly positive. This shows positivity.\n",
     "\n",
-    "Therefore the weighted dot product above is indeed an inner product.\n",
+    "Therefore, the weighted dot product above is indeed an inner product.\n",
+    ":::\n",
     "\n",
-    "We can generalize this example to $\\mathbb{R}^n$ and arbitrary *positive* weights. Let $c_1, ..., c_n > 0$ we *postiive numbers*. Then the corresponding *weighted inner product on $\\mathbb{R}^n$* is defined to be \n",
+    "The _weighted norm induced_ by the [weighted dot product](#weighted-dot-product-ex) on $\\mathbb{R}^2$ is then\n",
+    "$$\n",
+    "\\|\\vv v\\| = \\sqrt{ \\langle \\vv v, \\vv v\\rangle} = \\sqrt{2 v_1^2 v_1 + 5 v_2^2}\n",
+    "$$\n",
+    "which assigns more weights to the second coordinate relative to the first.\n",
+    "\n",
+    "We can generalize [](#weighted-dot-product-ex) to $\\mathbb{R}^n$ and arbitrary **positive** weights. Let $c_1, ..., c_n > 0$ we **positive numbers**. Then the corresponding _weighted inner product and weighted norm on $\\mathbb{R}^n$_ is defined to be \n",
     "\n",
     "\\begin{align*}\n",
-    "    \\langle \\vv v, \\vv w\\rangle = c_1v_1w_1 + ... + c_nv_nw_n\n",
+    "    \\langle \\vv v, \\vv w\\rangle = c_1v_1w_1 + ... + c_nv_nw_n \\\\\n",
+    "    \\|\\vv v\\| = \\sqrt{ \\langle \\vv v, \\vv v\\rangle} = \\sqrt{c_1v_1^2 + c_2v_2^2 + ... + c_nv_n^2}\n",
     "\\end{align*}\n",
     "\n",
     "The numbers $c_i > 0$ are called the *weights*. \n",
-    ":::\n",
-    "\n",
-    "An inner product allows us to define notions of angle, length, and distance in a vector space. When a vector space is equipped with an inner product, we call it an _inner product space_:\n",
-    "\n",
-    ":::{prf:definition} Inner Product Space\n",
-    ":label: inner-product-space-defn\n",
-    "An inner product space is a vector space $V$ equipped with an inner product $\\langle \\cdot, \\cdot \\rangle$ defined on $V$.\n",
-    ":::\n",
     "\n",
     ":::{prf:example} An inner product over a continuous function space\n",
     ":label:continuous-functions-inner-product-ex\n",
@@ -289,14 +332,30 @@
     "    &= \\sum_{t = 0}^{T}{\\tau f(i\\tau) g(i\\tau)}\n",
     "\\end{align*}\n",
     "\n",
-    "This should remind your of how the Riemann integral for $h(t) = f(t)g(t)$ is defined. Indeed, if we let $\\tau \\to 0$, we recover the integral inner product defined above. Since our inner product $\\langle f, g\\rangle$ is an inner product for any $\\tau$, it shouldn't be too surprising that the integral inner product does too.\n",
+    "This should remind your of how the Riemann integral for $h(t) = f(t)g(t)$ is defined. Indeed, if we let $\\tau \\to 0$, we recover the integral inner product defined above. Since our inner product $\\langle f, g\\rangle$ is an inner product for any $\\tau$, it shouldn't be too surprising that the ntegral inner product (**Int**) does too.\n",
+    "\n",
+    "**Int** then defines the $L_2$ norm of a function:\n",
+    "$$\n",
+    "\\|\\vv f\\| = \\sqrt{\\int_0^1 f(t)^2 dt}\n",
+    "$$\n",
+    "which generalizes the notion of length to functions. These ideas might seem very abstract, but they are immensely practical and lie at the heart of modern applications of Fourier analysis, differential equations, and numerical analysis.\n",
     "\n",
     ":::"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ea40ff73-4cef-48a7-b615-daa4d2ae27b4",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "Let's use the `np.inner` function in NumPy to compute the inner product between vectors and notice how it is different from the `np.dot` function. We also compute weighted inner products. Then, we use `np.linalg.norm` to directly compute the Eucledian norm of a vector and compare it with the induced norm of the corresponding inner product (dot product). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "840980dd-5205-44b9-9cef-cbefed87edcc",
    "metadata": {},
    "outputs": [
@@ -340,55 +399,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ee0761d7-aa2f-45dc-a02f-97d7c5f75706",
-   "metadata": {},
-   "source": [
-    "## Norms Induced by an Inner Product \n",
-    "\n",
-    "Just as we learned how the dot product may be generalized to inner products, we will study how the Euclidean norm (which is induced by the dot product) can be generalized into *norms induced by inner products*. In a later section, we will take one step further in abstraction and introduce an even more general definition of a norm and normed vector space.\n",
-    "\n",
-    "Just as the [Euclidean norm](#euclidean-norm-defn) was defined as the square root of the dot product of a vector with itself, we can define the *norm induced by an inner product* as follows.\n",
-    "\n",
-    ":::{prf:definition} Norm induced by an inner product\n",
-    ":label: induced-norm-defn\n",
-    "\n",
-    "Let $V$ be an inner product space with the inner product $\\langle \\cdot, \\cdot \\rangle$. The *norm induced by the inner product $\\langle \\cdot, \\cdot \\rangle$* is defined as \n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\| \\vv v \\| = \\sqrt{\\langle \\vv v, \\vv v\\rangle}\n",
-    "\\end{align*}\n",
-    ":::\n",
-    "\n",
-    "The positivity axiom of [inner products](#inner_defn) ensures that $\\|\\vv v \\| \\geq 0$ for all $\\vv v \\in V$, and that $\\|\\vv v\\| = \\vv 0$ if and only if $\\vv v = \\vv 0$. \n",
-    "\n",
-    "```{warning}\n",
-    "We are using the same norm symbol $\\| \\cdot \\|$ for many different norms. If we do not specify which norm/inner-product is being used, you should interpret this as a \"generic\" norm induced by a \"generic\" inner-product satisfying [](#inner_defn). The good news is that both behave in ways similar to the familiar inner product and Euclidean norm. \n",
-    "```\n",
-    "\n",
-    ":::{prf:example} The norm induced by a [weighted dot product](#weighted-dot-product-ex)\n",
-    ":label: weighted-norm-product-ex\n",
-    "\n",
-    "Recall the inner product defined in [this example](#weighted-dot-product-ex),\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\langle \\vv u, \\vv v \\rangle = 2u_1v_1 + 5u_2v_2\n",
-    "\\end{align*}\n",
-    "\n",
-    "for vectors $\\vv u, \\vv v \\in \\mathbb{R}^2$. The [induced norm](#induced-norm-defn) by this inner product is\n",
-    "\n",
-    "\\begin{align*}\n",
-    "    \\|\\vv v\\| = \\sqrt{\\langle \\vv v, \\vv v \\rangle} = \\sqrt{2v_2^2 + 5v_2^2}\n",
-    "\\end{align*}\n",
-    "\n",
-    "which assigns more weight to the second coordinate relative to the first. Like with the weighted dot product, this idea behind this *weighted norm* easily generalizes to $\\mathbb{R}^n$.\n",
-    "\n",
-    ":::"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "4864e3fa-1c23-43ef-bfc2-2f4d3757138e",
    "metadata": {},
    "outputs": [
@@ -413,13 +425,13 @@
    "id": "c4671a2b-50e6-476c-8b7e-900a619e0adb",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/041-inner.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d460d42-dbff-4f57-91b8-6b5ee954ee51",
+   "id": "e6767699-49cb-4906-b881-8ade00800d75",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -445,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
