--- a/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
@@ -37,7 +37,7 @@
    "id": "98935a65-a56d-4f4b-9225-e09a1b07dbf1",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/042-angle.ipynb)\n",
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb)\n",
     "\n",
     "{doc}`Lecture notes <../lecture_notes/Lecture 05 - Inner products, length, angles, and norms.pdf>`"
    ]
@@ -60,11 +60,11 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- what is the Cauchy-Schwarz Inequality\n",
+    "- the Cauchy-Schwarz Inequality\n",
     "- the generalized angle between vectors\n",
-    "- what is orthogonality\n",
+    "- orthogonality between vectors\n",
     "- the triangle inequality\n",
-    "- what are norms "
+    "- definition and examples of norms "
    ]
   },
   {
@@ -72,7 +72,7 @@
    "id": "a1b52c01-f3b4-4b43-baeb-f97bc73802a8",
    "metadata": {},
    "source": [
-    "## Generalized angle\n",
+    "## Generalized Angle\n",
     "\n",
     "Our starting point in defining the notion of angle in a general inner product space is the familiar formula\n",
     "\\begin{equation}\n",
@@ -105,12 +105,12 @@
     "Equality holds in [](#cauchy) if and only if $\\vv v$ and $\\vv w$ are parallel vectors.\n",
     "```\n",
     "\n",
-    ":::{prf:definition} Generalized angle\n",
+    ":::{prf:definition} Generalized Angle\n",
     ":label: angle_defn\n",
-    "The [inequality](#cauchy) lets us define the following _generalized angle_ between any two vectors $\\vv v$ and $\\vv w$ in an inner product space:\n",
+    "[This inequality](#cauchy) lets us define the following _generalized angle_ between any two vectors $\\vv v$ and $\\vv w$ in an inner product space:\n",
     "\\begin{equation}\n",
     "\\label{angle_defn}\n",
-    "\\cos(\\theta) = \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|\\|\\vv w\\|}\n",
+    "\\cos(\\theta) = \\frac{\\langle \\vv v, \\vv w \\rangle}{\\|\\vv v\\|\\|\\vv w\\|} \\ \\textrm{angle}\n",
     "\\end{equation}\n",
     ":::\n",
     "[](#angle_defn) makes sense because, by [](#cauchy), we know that\n",
@@ -130,15 +130,15 @@
     "\n",
     ":::{prf:example} \n",
     ":label:dot_eg\n",
-    "The vectors $\\vv v = \\bm 1 \\\\ 1 \\\\ 0\\em$ and $\\vv w = \\bm 2 \\\\ 1 \\\\ 1\\em$ have dot product $\\vv v . \\vv w = 3$ and norms $\\|\\vv v\\| = \\sqrt{2}, \\|\\vv w\\| = \\sqrt{6}$. Hence,\n",
+    "The vectors $\\vv v = \\bm 1 \\\\ 0 \\\\ 1\\em$ and $\\vv w = \\bm 0 \\\\ 1 \\\\ 1\\em$ have dot product $\\vv v . \\vv w = 1$ and norms $\\|\\vv v\\| = \\|\\vv w\\|  = \\sqrt{2}$. Hence,\n",
     "$$\n",
-    "\\cos(\\theta) = \\frac{3}{\\sqrt{2}\\sqrt{6}} = \\frac{\\sqrt{3}}{2} \\Rightarrow \\theta = \\arccos\\left(\\frac{\\sqrt{3}}{2}\\right) = \\frac{\\pi}{6}  \\ \\textrm{rad},\n",
+    "\\cos(\\theta) = \\frac{1}{\\sqrt{2}\\sqrt{2}} = \\frac{1}{2} \\Rightarrow \\theta = \\arccos\\left(\\frac{1}{2}\\right) = \\frac{\\pi}{3}  \\ \\textrm{rad},\n",
     "$$\n",
     "which is the usual notion of angle. \n",
     "\n",
-    "We can also compute the _angle_ between $\\vv v$ and $\\vv w$ with respect to the weighted inner product $\\langle \\vv v, \\vv w \\rangle = 2v_1w_1 + 3v_3w_3$. For this inner product, $\\langle \\vv v, \\vv w \\rangle = 4, \\| \\vv v\\| = \\sqrt{2}, \\|\\vv w\\| = \\sqrt{11}$. Hence,\n",
+    "We can also compute the _angle_ between $\\vv v$ and $\\vv w$ with respect to the weighted inner product $\\langle \\vv v, \\vv w \\rangle = v_1w_1 + 2v_2w_2 + 3v_3w_3$. For this inner product, $\\langle \\vv v, \\vv w \\rangle = 3, \\| \\vv v\\| = 2, \\|\\vv w\\| = \\sqrt{5}$. Hence,\n",
     "$$\n",
-    "\\cos(\\theta) = \\frac{4}{\\sqrt{2}\\sqrt{11}} = 0.8528 \\Rightarrow \\theta = \\arccos\\left(0.8528\\right) = 0.5495 \\ \\textrm{rad}.\n",
+    "\\cos(\\theta) = \\frac{3}{2\\sqrt{5}} = 0.67082 \\Rightarrow \\theta = \\arccos\\left(0.67082\\right) = 0.83548 \\ \\textrm{rad}.\n",
     "$$\n",
     ":::\n",
     "\n",
@@ -148,12 +148,22 @@
     "$$\n",
     "\\cos(\\theta) = \\frac{\\langle p, q \\rangle}{\\|p\\| \\|q\\|} = \\frac{\\langle \\vv p, \\vv q \\rangle}{\\|\\vv p\\| \\|\\vv q\\|}.\n",
     "$$\n",
-    "For example, if $p(x)  = 1 + x$ and $q(x) = -1 + x^2$, then $\\langle p, q \\rangle = -1$ and $\\| p \\| = \\sqrt{2}, \\| q \\| = \\sqrt{2}$, and ${\\cos(\\theta) = \\frac{-1}{2} \\Rightarrow \\theta = \\frac{2\\pi}{3}}$.\n",
+    "For example, if $p(x)  = 1 + x^2$ and $q(x) = x + x^2$, then $\\langle p, q \\rangle = 1$ and $\\| p \\| = \\| q \\| = \\sqrt{2}$, and ${\\cos(\\theta) = \\frac{1}{2} \\Rightarrow \\theta = \\frac{\\pi}{3}}$.\n",
     ":::\n",
     "\n",
-    "```{note}\n",
+    ":::{note}\n",
     "The expression ([angle](#angle_defn)) is called the _cosine similarity_ of two vectors and measures how \"aligned\" they are. Cosine similarity plays an important role in modern chatbots like ChatGPT, which will be discussed in the case study.\n",
-    "```"
+    ":::"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "efc6e055-6a87-4f85-8649-0531886065dd",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "We show how to use NumPy functions (`np.dot, np.linalg.norm, np.arcos`) to compute the angle between vectors. We also show how to compute cosine similarity from the [cosine distance](https://docs.scipy.org/doc/scipy/reference/generated/scipy.spatial.distance.cosine.html) between vectors using `scipy.spatial` library."
    ]
   },
   {
@@ -435,7 +445,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
