binder link fixes

--- a/02_Ch_3_Inner_Products_and_Norms/042a-transformer-case-study.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042a-transformer-case-study.ipynb
@@ -32,7 +32,7 @@
    "id": "2cb5d88c-e8e1-4be6-aa17-80f32a96f291",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
    ]
   },
   {
@@ -48,7 +48,9 @@
   {
    "cell_type": "markdown",
    "id": "a0cc9bd4-0ed7-4a40-8770-3d6f5603b763",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "First, let's look at the archictecture itself. The Transformer was first proposed by Vaswani et. al. in [*Attention is all you need*](https://arxiv.org/abs/1706.03762v7). At the core of the transformer is the Attention Mechanism. \n",
     "\n",
@@ -627,7 +629,7 @@
    "id": "e7bb0100-8000-473e-9f10-842d63f020ca",
    "metadata": {},
    "source": [
-    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
+    "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/Case_Study_On_Transformers/048-transformer-case-study.ipynb)"
    ]
   }
  ],
