more chapter 3 corrections

--- a/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/041-inner.ipynb
@@ -282,7 +282,7 @@
     "3. **Positivity.**\n",
     "\n",
     "\\begin{align*}\n",
-    "    \\langle \\vv v, \\vv v\\rangle &= 2 v_1^2 v_1 + 5 v_2^2\n",
+    "    \\langle \\vv v, \\vv v\\rangle &= 2 v_1^2  + 5 v_2^2\n",
     "\\end{align*}\n",
     "\n",
     "If $\\vv v = \\vv 0$, then clearly this expression is zero because all terms are zero. On the other hand, if either component of $\\vv v$ is nonzero, then this expression is strictly positive. This shows positivity.\n",
@@ -292,7 +292,7 @@
     "\n",
     "The _weighted norm induced_ by the [weighted dot product](#weighted-dot-product-ex) on $\\mathbb{R}^2$ is then\n",
     "$$\n",
-    "\\|\\vv v\\| = \\sqrt{ \\langle \\vv v, \\vv v\\rangle} = \\sqrt{2 v_1^2 v_1 + 5 v_2^2}\n",
+    "\\|\\vv v\\| = \\sqrt{ \\langle \\vv v, \\vv v\\rangle} = \\sqrt{2 v_1^2 + 5 v_2^2}\n",
     "$$\n",
     "which assigns more weights to the second coordinate relative to the first.\n",
     "\n",
@@ -457,7 +457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
