--- a/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/042-angle.ipynb
@@ -126,7 +126,7 @@
    "id": "40399492",
    "metadata": {},
    "source": [
-    "## Angles between generic vectors\n",
+    "## Angles between Generic Vectors\n",
     "\n",
     ":::{prf:example} \n",
     ":label:dot_eg\n",
@@ -206,7 +206,7 @@
    "id": "ced998c1-86cd-4be4-9c06-0f95a2dd9933",
    "metadata": {},
    "source": [
-    "## Orthogonal vectors\n",
+    "## Orthogonal Vectors\n",
     "\n",
     "The notion of _perpendicular vectors_ is an important one in Euclidean geometry. These are vectors that meet at a right angle, i.e., $\\theta = \\frac{\\pi}{2}$ or $\\theta = -\\frac{\\pi}{2}$, with $\\cos \\theta = 0$. This tells us that vectors $\\vv v$ and $\\vv w$ are perpendicular if and only if their dot product vanishes: $\\vv v \\cdot \\vv w = 0$ (can you see why via [Cauchy-Schwarz](#cauchy_schwarz)?).\n",
     "\n",
