--- a/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -50,8 +50,8 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the Euclidean distance between two vectors?\n",
-    "- What are the properties of a general distance function?"
+    "- the Euclidean distance between two vectors\n",
+    "- the properties of a general distance function"
    ]
   },
   {
@@ -286,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
