--- a/02_Ch_3_Inner_Products_and_Norms/044-clustering.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/044-clustering.ipynb
@@ -50,9 +50,9 @@
     "## Learning Objectives\n",
     "\n",
     "By the end of this page, you should know:\n",
-    "- What is the clustering problem?\n",
-    "- What is the centroid, or mean, of a group of vectors?\n",
-    "- What is the K-means algorithm?"
+    "- the clustering problem\n",
+    "- the centroid, or mean, of a group of vectors\n",
+    "- the K-means algorithm"
    ]
   },
   {
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.8.19"
   }
  },
  "nbformat": 4,
