added determinant fact 5

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/082-determinants.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/082-determinants.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "* [Math 1410 video lecture (geometric interpretation of the determinant for small matrices)](https://www.youtube.com/watch?v=6hXxrbnbtC4)\n",
     "\n",
-    "## Determinants and Invertibility\n",
+    "## Properties of the Determinant\n",
     "\n",
     "First, we'll state a couple of key facts about the determinant.\n",
     "\n",
@@ -82,6 +82,8 @@
     "A corollary of Fact 3, which we will use in our eigenvalue computations, is that $A$ is singular if and only if $\\det A = 0$.\n",
     "\n",
     "4. If $U$ is a block upper diagonal matrix, i.e., if $U = \\bm U_{11} & U_{12} \\\\ 0 & U_{22}\\em$ for $U_{ij}$ of compatible dimension, then $\\det U = \\det{U_{11}} \\cdot\\det{U_{22}}$, i.e., the determinant of $U$ is given by the products of the determinants of its block diagonals.\n",
+    "\n",
+    "5. The determinant of a matrix is equal to the determinant of its transpose, $\\det A = \\det A^\\top$.\n",
     "\n",
     ":::\n",
     "\n",
