--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/083-characteristic_equations.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/083-characteristic_equations.ipynb
@@ -46,7 +46,8 @@
     "\n",
     "By the end of this page, you should know:\n",
     "- how to define the characteristic equation of a square matrix $A$,\n",
-    "- how to solve the characteristic equation to find the eigenvalues of $A$."
+    "- how to solve the characteristic equation to find the eigenvalues of $A$,\n",
+    "- that $A$ and $A^\\top$ have the same eigenvalues for square $A$."
    ]
   },
   {
@@ -70,6 +71,8 @@
     "\n",
     "The characteristic equation is a $n^{\\text{th}}$-degree polynomial equation in terms of $\\lambda$. This can be seen by fully expanding the equation using the entries of $A$ (e.g., via the [Laplace expansion](#laplace-expansion-defn)).\n",
     ":::\n",
+    "\n",
+    "A key property which follows is that $A$ and $A^\\top$ have the same characteristic polynomial (see determinant [Fact 5](#determinant-properties-defn)) and hence the same eigenvalues. We emphasize that they do not, however, have the same eigenvectors!\n",
     "\n",
     "## Finding the Eigenvalues by Solving the Characteristic Equation\n",
     "\n",
