finished repeated and complex eigenvalues page

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
@@ -131,7 +131,29 @@
     "\n",
     "A couple of observations about the example above:\n",
     "\n",
-    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_-1 = \\bar{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:"
+    "* $\\lambda_1$ and $\\lambda_2$ are *complex conjugates*, i.e., $\\lambda_-1 = \\bar{\\lambda_2}$, as are $\\vv{v_1}$ and $\\vv{v_2}$. This is a general fact about *real* matrices:\n",
+    "\n",
+    ":::{prf:theorem} Complex eigenvalues of real matrice occur in conjugate pairs\n",
+    ":label: complex-eigenvalue-thm\n",
+    "\n",
+    "If $A$ is a real matrix (i.e., $A_{ij} \\in \\mathbb R$), with a complex eigenvalue $\\lambda = a + ib$, and corresponding eigenvector $\\vv v = \\vv x + i \\vv y$, then the complex conjugate $\\bar \\lambda = a - ib$ is also an eigenvalue with complex conjugate eigenvector $\\vv{\\bar v} = \\vv x - i \\vv y$.\n",
+    ":::\n",
+    "\n",
+    "* The eigenvalues for our example, which defines a pure rotation in $\\mathbb{R}^2$, are purely imaginary. This isn't a coincidence! When we discuss symmetric and skew symmetric matrices later in this class, this will be further explained, but for now, you should start associating imaginary components of eigenvalues with rotations.\n",
+    "\n",
+    "# Basic Properties of Eigenvalues\n",
+    "\n",
+    "We want to belabor the derivation of the following properties of eigenvalues: they mostly follow from properties of the determinant and the Funamental Theorem of Algebra (which states that any degree $n$ polynomial equation with complex coefficients has exactly $n$ complex roots, counting multiplicities). The TLDR is that for any $A \\in \\mathbb{R}^{n\\times n}$, its characteristic polynomial is a degree $n$ polynomial with real coefficients and can thus be factored as:\n",
+    "\\begin{align*}\n",
+    "    \\det (A - \\lambda I) - (-1)^n (\\lambda - \\lambda_1)(\\lambda - \\lambda_2) \\dots (\\lambda - \\lambda_n)\n",
+    "\\end{align*}\n",
+    "where the complex numbers $\\lambda_1, ..., \\lambda_n$, some of which may be repeated, are the eigenvalues of $A$. Therefore we immediately conclude that:\n",
+    "\n",
+    ":::{prf:theorem} Number of distinct eigenvalues of an $n\\times n$ real matrix\n",
+    ":label: distinct-eigenvalue-thm\n",
+    "\n",
+    "An $n\\times n$ real matrix has at least one, and at most $n$, distinct complex eigenvalues.\n",
+    ":::"
    ]
   }
  ],
