updated lecture notes

--- a/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
+++ b/06_Ch_7_Eigenvalues_and_Eigenvectors/086-repeated_complex_eigenvalues.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/03_Orthogonality/053-orthogonal_matrices.ipynb)\n",
     "\n",
-    "{doc}`Lecture notes <../lecture_notes/Lecture 07 - Orthogonality, Gram-Schmidt, Orthogonal Matrices, and QR-Factorization.pdf>`"
+    "{doc}`Lecture notes <../lecture_notes/Lecture 12 - Eigvenvalues and Eigenvectors part 2 (complex eigenvalues and eigenvectors, similarity transformation, diagonalization and eigenbases).pdf>`"
    ]
   },
   {
