clustering and nearest neighbor edits

--- a/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
+++ b/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb
@@ -102,6 +102,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Python break!\n",
+    "\n",
+    "We use the `np.linalg.norm` function in Python to compute the Eucledian distance between two vectors by computing the norm of the difference between the vectors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -164,7 +173,7 @@
     "\n",
     "Note that one vector space can admit many distance functions. From here on, unless otherwise mentioned, we will only be considering the [Euclidean distance](#euclidean_distance_defn).\n",
     "\n",
-    ":::{prf:example} Matrix norms and their induced distances\n",
+    ":::{prf:example} Matrix Norms and their Induced Distances\n",
     ":label:distance-matrix_norm_ex\n",
     "\n",
     "Let $M \\in \\mathbb{R}^{n \\times n}$ be a symmetric square matrix such that $x^T M x > 0$ for all nonzero $x\\in \\mathbb{R}^n$. Such a matrix is called *positive definite*; some equivalent definitions of positive definite matrices are symmetric matrices which may be decomposed as $A^TA$, where $A$ is an invertible square matrix, or symmetric matrices with all *strictly positive* eigenvalues. A familiar positive definite matrix is the identity matrix, $I_n$.\n",
@@ -179,7 +188,7 @@
     "\n",
     ":::\n",
     "\n",
-    ":::{prf:example} Distances on a connected graph\n",
+    ":::{prf:example} Distances on a Connected Graph\n",
     ":label:distance-connected_graph_ex\n",
     "\n",
     "In this example, we'll demonstrate how the [definition of a distance function](#general_distance_defn) can be satisfied when the underlying space isn't a vector space. We will consider the *shortest walk distance on a connected undirected graph*.\n",
@@ -228,7 +237,7 @@
    "source": [
     "## Applications of Distances\n",
     "\n",
-    ":::{prf:example} Feature distances\n",
+    ":::{prf:example} Feature Distances\n",
     ":label:distance-feature_distance\n",
     "\n",
     "If $\\vv x, \\vv y \\in V$ are vectors containing *features* of two objects, $\\|\\vv  x - \\vv  y\\|$ is called the *feature distance*. It gives a measure of how \"different\" two objects are. \n",
@@ -236,7 +245,7 @@
     "For example, suppose each vector represents a patient in a hospital with entries such as age, weight, height, and test results. We can use $\\| \\vv x - \\vv y\\|$ to check if patients $\\vv x$ and $\\vv y$ are \"close\" to each other with respect to these features.\n",
     ":::\n",
     "\n",
-    ":::{prf:example} Nearest neighbors\n",
+    ":::{prf:example} Nearest Neighbors\n",
     ":label:distance-nearest_neighbors\n",
     "\n",
     "Suppose we are given a collection $\\vv {z_1}, ..., \\vv {z_m} \\in V$ of $m$ vectors living in a vector space $V$. We say that $\\vv{z_j}$ is the *nearest neighbor* of $\\vv {x}$ among the vectors $\\vv {z_1}, ..., \\vv {z_m} \\in V$ if \n",
@@ -261,13 +270,6 @@
    "source": [
     "[![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/nikolaimatni/ese-2030/HEAD?labpath=/02_Ch_3_Inner_Products_and_Norms/043-distance_nearest_neighbhors.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
